--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -13,41 +13,26 @@
   // .main-display__card-wrapper
 
   &__card-wrapper {
-    // display: grid;
-    display: flex;
+    display: grid;
+
     // .main-display__card-wrapper_trailer
 
     &_trailer {
-      // grid-template-columns: 1fr;
+      grid-template-columns: 1fr;
     }
 
     // .main-display__card-wrapper_continuing
 
     &_continuing {
-
-      // grid-template-columns: repeat(auto-fit, minmax(45rem, max-content));
-      // gap: 6rem;
-      &>*:not(:last-child) {
-        margin-right: 6rem;
-      }
-
-      // &:first-child {
-      //   color: rebeccapurple;
-      //   border: 5px solid red;
-      // }
+      grid-template-columns: repeat(2, minmax(calc((450/961) *100%), max-content));
+      gap: 6rem calc(60/961*100%);
     }
 
     // .main-display__card-wrapper_trending
 
     &_trending {
-
-      // grid-template-columns: repeat(auto-fit, minmax(28.6rem, max-content));
-      // grid-template-columns: repeat(auto-fit, minmax(28.6rem, max-content));
-      // grid-template-columns: repeat(auto-fit, minmax(28.6rem, 28.6rem));
-      // gap: 5rem;
-      &>*:not(:last-child) {
-        margin-right: 5rem;
-      }
+      grid-template-columns: repeat(3, minmax(calc(286/961*100%), max-content));
+      gap: 5rem calc(50/961*100%);
     }
   }
 }
